tests/fsharp/core/sigs/neg37.bsl

neg37.fs(6,19): error FS0670: This code is not sufficiently generic. The type variable 'T could not be generalized because it would escape its scope.

neg37.fs(10,19): error FS0670: This code is not sufficiently generic. The type variable 'T could not be generalized because it would escape its scope.
